# Starbound

./: .gitattributes  .gitignore  README.md
assets/: packed.pak
assets/devel/: _metadata  authmunin.config  devel.macros  dungeon_worlds.config.patch  instance_worlds.config.patch
assets/user/: _metadata
attic/: jemalloc_config  qt5_configure_options.sh  upload.py
attic/SBDiagnose/: CheckSum.pas  SBDiagnose.cfg  SBDiagnose.dof  SBDiagnose.dpr  SBDiagnose.res  SBDiagnoseForm.dfm  SBDiagnoseForm.pas
attic/ai_commands_backups/: giveBeamaxe.aicommand.disabled  upgradeBeamaxeLiquid1.aicommand.disabled  upgradeBeamaxePower1.aicommand.disabled  upgradeBeamaxePower2.aicommand.disabled  upgradeBeamaxePower3.aicommand.disabled  upgradeBeamaxePower4.aicommand.disabled  upgradeBeamaxeSize1.aicommand.disabled  upgradeBeamaxeSize2.aicommand.disabled  upgradeBeamaxeSize3.aicommand.disabled  upgradeBeamaxeSize4.aicommand.disabled
attic/authentication/: CMakeLists.txt  StarAuthenticationConnection.cpp  StarAuthenticationConnection.hpp  StarAuthenticationDatabaseFacade.hpp  StarAuthenticationKey.cpp  StarAuthenticationKey.hpp  StarAuthenticationService.cpp  StarAuthenticationService.hpp  StarClientAuthentication.cpp  StarClientAuthentication.hpp  StarServerAuthentication.cpp  StarServerAuthentication.hpp
attic/authserver/: CMakeLists.txt  StarAuthenticationDatabase.cpp  StarAuthenticationDatabase.hpp  StarAuthenticationServer.cpp  StarAuthenticationServer.hpp  StarDatabaseConnector.cpp  StarDatabaseConnector.hpp  keygen.cpp  main.cpp
attic/biped/: animation.config  biped.monstertype.disabled  colors.config
attic/launcher/: Commands.cpp  Commands.hpp  Launcher.cpp  Launcher.hpp  launcher.qrc  launcher.qss  launcher.rc  main.cpp
attic/npcs/: default.config
attic/old_source/: StarAccessControl.cpp  StarAccessControl.hpp  StarAnimation.cpp  StarAnimation.hpp  StarAuthentication.cpp  StarAuthentication.hpp  StarCircle.hpp  StarFlowingLiquidAgent.cpp  StarFlowingLiquidAgent.hpp  StarLiveCounter.cpp  StarLiveCounter.hpp  StarNetStates.cpp  StarNetStates.hpp  StarNetTransmitters.cpp  StarNetTransmitters.hpp  StarServerShell.cpp  StarServerShell.hpp  StarStreamingVideoInterface.cpp  StarStreamingVideoInterface.hpp  StarStringContainers.cpp  StarStringContainers.hpp  StarUniverseController.cpp  StarUniverseController.hpp  net_states_test.cpp
attic/old_tests/: algo_test.cpp  any_test.cpp  block_storage_test.cpp  compression_test.cpp  coordinate_test.cpp  image_test.cpp  line_poly.cpp  line_test.cpp  linq_test.cpp  lua_test.cpp  net_test.cpp  netsocket_test.cpp  pointer_test.cpp  rand_test.cpp  signal_test.cpp  simple_database_stress.cpp  stacktrace_test.cpp  step_stream_test.cpp  stringmap_test.cpp  thread_test.cpp  variant_test.cpp
attic/old_version_scripts/: clientcontext_1_2.lua  itemparameters_0_1.lua  npcentity_1_2.lua  objectentity_1_2.lua  worldmetadata_1_2.lua  worldmetadata_2_3.lua  worldmetadata_3_4.lua  worldmetadata_4_5.lua
attic/rcon/: rcon.c
attic/sblclfx/: sblclfx.sln
attic/scripts/: entityProxy.lua
attic/snowbirch/: snowbirch.modularstem
attic/steam/: CMakeLists.txt  StarSteamCheck.cpp  StarSteamCheck.hpp
attic/streamingvideo/: CMakeLists.txt  StarStreamingVideoController.cpp  StarStreamingVideoController.hpp  StarTwitchStreamingVideoController.cpp  StarTwitchStreamingVideoController.hpp
attic/streamingvideo/twitch/: twitchchat.h  twitchsdk.h  twitchsdktypes.h  twitchwebcam.h
attic/unneeded/: StarCoordSys.hpp  StarFFT.hpp  StarFifo.cpp  StarFifo.hpp  StarGuardedPtr.hpp  StarMatrix4.hpp  StarMultiArrayInterpolator.hpp  StarNoiseField.hpp  StarPromise.hpp  StarQuaternion.hpp  StarRUTable.hpp  StarSparseArray.hpp  StarTable.hpp  StarUTable.hpp  guarded_ptr_test.cpp  liquid_test.cpp  renderer_test.cpp
lib/windows64/: SDL2.lib
lib/xboxone/: freetype.lib  jemalloc.lib  libpng16.lib  ogg.lib  vorbis.lib  vorbisfile.lib  zlib.lib
scripts/: discord-dispatch.json  gog-project-linux.json  gog-project-osx.json  gog-project-windows.json  priceobjects.py
scripts/gitlab-ci/: deploy_stable_steam.sh  deploy_unstable_steam.sh
scripts/osx/: copy-to-steam.sh  setup.sh
scripts/windows/: setup64-ninja.bat  setup64.bat
source/: CMakeLists.txt
source/application/: CMakeLists.txt  StarDesktopService_pc_steam.hpp  StarMainApplication_sdl.cpp  StarP2PNetworkingService_pc.cpp  StarPlatformServices_pc.cpp  StarRenderer.cpp  StarRenderer_opengl20.cpp  StarTextureAtlas.hpp  StarUserGeneratedContentService_pc_steam.hpp
source/base/: CMakeLists.txt  StarAnimatedPartSet.cpp  StarAssets.cpp  StarDirectoryAssetSource.cpp  StarMixer.cpp
source/client/: CMakeLists.txt  StarClientApplication.cpp
source/core/: CMakeLists.txt  StarAlgorithm.hpp  StarAudio.cpp  StarBTreeDatabase.cpp  StarBuffer.cpp  StarByteArray.cpp  StarCompression.cpp  StarDataStream.cpp  StarDataStreamDevices.cpp  StarDataStreamDevices.hpp  StarEncode.cpp  StarException.hpp  StarException_unix.cpp  StarException_windows.cpp  StarFile.cpp  StarFlatHashSet.hpp  StarFormat.hpp  StarHostAddress.cpp  StarIdMap.hpp  StarImage.cpp  StarJson.cpp  StarJsonBuilder.cpp  StarJsonExtra.hpp  StarJsonParser.hpp  StarJsonRpc.cpp  StarList.hpp  StarLockFile_unix.cpp  StarLockFile_windows.cpp  StarLua.cpp  StarLua.hpp  StarLuaConverters.hpp  StarMap.hpp  StarMaybe.hpp  StarMultiArray.hpp  StarNetElementContainers.hpp  StarOptionParser.cpp  StarOrderedMap.hpp  StarOrderedSet.hpp  StarParametricFunction.hpp  StarPeriodic.hpp  (+13 more)
source/frontend/: CMakeLists.txt  StarActionBar.cpp  StarAiInterface.cpp  StarChat.cpp  StarChatBubbleManager.cpp  (+15 more)
source/json_tool/: CMakeLists.txt
source/mod_uploader/: CMakeLists.txt
source/rendering/: CMakeLists.txt  StarAssetTextureGroup.cpp  StarDrawablePainter.cpp  StarEnvironmentPainter.cpp  StarFontTextureGroup.cpp  StarTextPainter.cpp  StarTilePainter.cpp  StarWorldCamera.hpp  StarWorldPainter.cpp
source/server/: CMakeLists.txt
source/utility/: CMakeLists.txt  asset_unpacker.cpp  dungeon_generation_benchmark.cpp  game_repl.cpp  generation_benchmark.cpp
tiled/: properties.txt
(+2154 files in other folders)
